--- a/lib/server_web/templates/layout/root.html.heex
+++ b/lib/server_web/templates/layout/root.html.heex
@@ -9,18 +9,19 @@
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
+
   <body>
     <header>
-      <section class="container">
+      <section>
         <nav>
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            
+            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>            
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
-        </a>
+
+        <div class="h-8">
+          <img src={Routes.static_path(@conn, "/images/logo.svg")} alt="Mix Server Logo"/>
+        </div>
       </section>
     </header>
     <%= @inner_content %>
