--- a/lib/server_web/templates/layout/root.html.heex
+++ b/lib/server_web/templates/layout/root.html.heex
@@ -15,15 +15,15 @@
     <header class="w-full">
       <section class="">
         <nav class="bg-gray-100 shadow dark:bg-gray-800">
-          <div class="flex justify-center items-center pt-5">
-            <img class="h-16 pr-8" src={Routes.static_path(@conn, "/images/logo.svg")} alt="Mix Server Logo" />
+          <div class="flex justify-center items-center pt-3">
+            <img class="h-14 pr-4" src={Routes.static_path(@conn, "/images/logo.svg")} alt="Mix Server Logo" />
 
             <h1 class="text-4xl text-gray-800 dark:text-gray-300">
               Elixir HTTP Server
             </h1>
           </div>
 
-          <div class="container flex items-center justify-center pb-5 pt-4 mx-auto text-gray-600 capitalize dark:text-gray-300">
+          <div class="container flex items-center justify-center pb-3 pt-3 mx-auto text-gray-600 capitalize dark:text-gray-300">
             <a href="https://hex.pm/packages/server" class={nav_classes()} target="_blank">
               Hex
             </a>
@@ -33,7 +33,7 @@
             </a>
 
             <a href="https://github.com/sponsors/akoutmos" class={nav_classes()} target="_blank">
-              Sponsor
+              Sponsor My Work
             </a>
           </div>
         </nav>
