--- a/lib/server_web/templates/layout/live.html.heex
+++ b/lib/server_web/templates/layout/live.html.heex
@@ -20,7 +20,11 @@
   </div>
 
   <div class="fixed bottom-0 w-full bg-white dark:bg-gray-800 py-2">
-    <a class="text-sm float-right mr-2 text-gray-600 dark:text-gray-200 hover:underline" href="https://github.com/sponsors/akoutmos" target="_blank">
+    <a
+      class="text-sm float-right mr-2 text-gray-600 dark:text-gray-200 hover:underline"
+      href="https://github.com/sponsors/akoutmos"
+      target="_blank"
+    >
       Made with ❤️ by Alex Koutmos
     </a>
   </div>
