Setting up readme

--- a/lib/server_web/templates/layout/root.html.heex
+++ b/lib/server_web/templates/layout/root.html.heex
@@ -19,7 +19,7 @@
             <img class="h-14 pr-4" src={Routes.static_path(@conn, "/images/logo.svg")} alt="Mix Server Logo" />
 
             <h1 class="text-4xl text-gray-800 dark:text-gray-300">
-              Elixir HTTP Server
+              Mix HTTP Server
             </h1>
           </div>
 
