Comitting built assets

--- a/lib/server_web/live/file_explorer_live.html.heex
+++ b/lib/server_web/live/file_explorer_live.html.heex
@@ -1,6 +1,6 @@
 <div class="bg-gray-200 dark:bg-gray-700 rounded-md mb-12">
   <div class="bg-gray-300 dark:bg-gray-800 rounded-t-md">
-    <div class="container flex items-center px-6 py-3 mx-auto overflow-y-auto whitespace-nowrap">
+    <div class="container flex items-center px-6 py-3 overflow-y-auto whitespace-nowrap">
       <%= live_redirect to: Routes.live_path(@socket, __MODULE__, []),
                     class: "text-gray-600 dark:text-gray-200 flex items-center" do %>
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 20 20" fill="currentColor">
