Fixing build related stuff

--- a/lib/server_web/templates/layout/root.html.heex
+++ b/lib/server_web/templates/layout/root.html.heex
@@ -24,11 +24,11 @@
           </div>
 
           <div class="container flex items-center justify-center pb-3 pt-3 mx-auto text-gray-600 capitalize dark:text-gray-300">
-            <a href="https://hex.pm/packages/server" class={nav_classes()} target="_blank">
+            <a href="https://hex.pm/packages/ex_server" class={nav_classes()} target="_blank">
               Hex
             </a>
 
-            <a href="https://github.com/akoutmos/server" class={nav_classes()} target="_blank">
+            <a href="https://github.com/akoutmos/ex_server" class={nav_classes()} target="_blank">
               Source Code
             </a>
 
